# CNU

./: README.md
22_CP/: practice_0527.c  quiz_9-2.c  scanf3.c  test.c  test.out
22_CP/2022_1학기/: CP_03_01_09_2  CP_03_01_09_2.c  address.c  address_202102699.out  scanf2  strcompare  strcompare.c
22_CP/final_term/: heap_pointer  heap_pointer.c  pointerOfArr.c  quiz_12-1.c  quiz_12-4  quiz_12-4.c  quiz_9-2.c  swapIntPtr
22_OOP/: inheritance_ex  inheritance_ex.cc  test.cc
22_OOP/lab01/: hello
22_OOP/lab02/: util.h
22_OOP/lab04/: Makefile  float_acc.cc  float_acc.h  int_acc.cc
22_OOP/lab05/: main.cc  node.cc  node.h  tree_util.cc  tree_util.h  (+1 more)
23_DC/: 202102699.c
23_ITC/: Main.java
23_SE/: 8_Fibonacci(activity_diagram).uxf  8_TAM(state_diagram).uxf  8_toy_train(state_diagram).uxf  9_package_diagram(total).uxf
23_UPL/hw13/: dune
24_DB/: d202102699_lab07.sql  d202102699_lab08.sql  d202102699_lab09.sql
24_DS/: README.md  dune
24_ES/: term_code.c
DB_24/: d2021026991_lab03.sql  d202102699_lab04.sql  d202102699_lab05.sql  d202102699_lab06.sql  d202102699_lab10.sql
DC_23/: commData_final.c
IP_23/: test.py
ITC_23/: .Main.java.swp
OOP_22/: test
PL_25/lambda_calculus/: derivation_call_by_value.ml  dune
PL_25/lambda_calculus/parser/: ast.ml
SA_24/hw05/with_tree/: dune  main.ml  re.ml
SE_23/: 5_usecase.uxf  6_class_modeling.uxf  7_class_modeling(school).uxf  9_Component_diagram.uxf  9_Deployment_diagram.uxf  9_package_diagram(Business).uxf  9_package_diagram(DB).uxf  9_package_diagram(GUI).uxf
UB_bugs_test/: update_test.py  wrap.py
(+886 files in other folders)
