(include_subdirs unqualified)

(library
 (name hw13)
 (modules hw13)
 (libraries ParserMain AddrManager env Memory Value Ast))

(library 
 (name ParserMain) 
 (modules ParserMain Parser Lexer)
 (libraries Ast))

(library 
 (name AddrManager) 
 (modules AddrManager))

(library
 (name Memory)
 (modules Memory)
 (libraries env Value))

(library 
 (name env) 
 (modules env))


(library
 (name Value)
 (modules Value))

(library
 (name Ast)
 (modules Ast))